--- a/src/assets/styles/pages/about.scss
+++ b/src/assets/styles/pages/about.scss
@@ -1,9 +1,16 @@
 @import "../lib";
 
+.aboutContainer {
+    position: relative;
+    min-height: 100vh;
+    @include colCenter();
+    justify-content: space-between;
+}
+
 #about {
     .banner {
         width: 100%;
-        height: 30vh;
+        height: 223px;
         object-fit: cover;
         border-radius: $S;
     }
